package com.okayji.chat.entity;

public enum ChatType {
    DIRECT, GROUP
}
