package com.okayji.chat.entity;

public enum MessageType {
    TEXT,
    IMAGE,
    VIDEO,
    FILE
}
