package com.okayji.feed.entity;

public enum PostStatus {
    PENDING,
    PUBLISHED,
    REJECTED,
    UNDER_REVIEW
}
