package com.okayji.identity.entity;

public enum Gender {
    MALE, FEMALE, OTHER
}
