package com.okayji.identity.entity;

public enum UserRole {
    USER, ADMIN;
}
