package com.okayji.identity.entity;

public enum UserStatus {
    ACTIVE,
    SUSPENDED, // Cant not post, comment
    DELETED
}
