package com.okayji.moderation.entity;

public enum ModerationDecision {
    ALLOW,
    REVIEW,
    BLOCK
}
