package com.okayji.notification.entity;

public enum NotificationType {
    FRIEND_REQUEST,
    NEW_FRIEND,
    LIKE_POST,
    COMMENT_POST,
    SYSTEM_ANNOUNCEMENT,
}
