package com.okayji.report.entity;

public enum ReportReason {
    SPAM, // Rác/Quảng cáo
    VIOLENCE, // Bạo lực
    HARASSMENT, // Quấy rối
    HATE_SPEECH, // Ngôn từ thù ghét
    NUDITY, // Nội dung nhạy cảm
    SCAM, // Lừa đảo
    OTHER
}
