package com.okayji.report.entity;

public enum ReportTargetType {
    POST,
    COMMENT,
    USER
}
